objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account.Name</formula>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Disposition__c</fullName>
        <label>Account Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Follow Up : Call to Re/Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DNC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bad_Phone_Numbers__c</fullName>
        <label>Bad Phone Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>000-000-0000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallDescriptionLog__c</fullName>
        <label>CallDescriptionLog</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Calls_Made_to_Mobile__c</fullName>
        <label>Calls Made to Mobile</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Made_to_Phone__c</fullName>
        <label>Calls Made to Phone</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conf_Homeowner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Homeowner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Organizational</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adams</fullName>
                </value>
                <value>
                    <fullName>Antelope</fullName>
                </value>
                <value>
                    <fullName>Arthur</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Blaine</fullName>
                </value>
                <value>
                    <fullName>Boone</fullName>
                </value>
                <value>
                    <fullName>Box Butte</fullName>
                </value>
                <value>
                    <fullName>Boyd</fullName>
                </value>
                <value>
                    <fullName>Burt</fullName>
                </value>
                <value>
                    <fullName>Butler</fullName>
                </value>
                <value>
                    <fullName>Cass</fullName>
                </value>
                <value>
                    <fullName>Cedar</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>Cherry</fullName>
                </value>
                <value>
                    <fullName>Cheyenne</fullName>
                </value>
                <value>
                    <fullName>Clay</fullName>
                </value>
                <value>
                    <fullName>Colfax</fullName>
                </value>
                <value>
                    <fullName>Cuming</fullName>
                </value>
                <value>
                    <fullName>Custer</fullName>
                </value>
                <value>
                    <fullName>Dakota</fullName>
                </value>
                <value>
                    <fullName>Dawes</fullName>
                </value>
                <value>
                    <fullName>Dawson</fullName>
                </value>
                <value>
                    <fullName>Dixon</fullName>
                </value>
                <value>
                    <fullName>Dodge</fullName>
                </value>
                <value>
                    <fullName>Douglas</fullName>
                </value>
                <value>
                    <fullName>Dundy</fullName>
                </value>
                <value>
                    <fullName>Fillmore</fullName>
                </value>
                <value>
                    <fullName>Franklin</fullName>
                </value>
                <value>
                    <fullName>Frontier</fullName>
                </value>
                <value>
                    <fullName>Furnas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>499 &amp; Less</fullName>
                </value>
                <value>
                    <fullName>500-549</fullName>
                </value>
                <value>
                    <fullName>550-599</fullName>
                </value>
                <value>
                    <fullName>600-649</fullName>
                </value>
                <value>
                    <fullName>650-699</fullName>
                </value>
                <value>
                    <fullName>700-749</fullName>
                </value>
                <value>
                    <fullName>750-799</fullName>
                </value>
                <value>
                    <fullName>800+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Mortgage_Amount__c</fullName>
        <label>First Mortgage Amount</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Five9C2CCampaignName__c</fullName>
        <formula>IF(ISPICKVAL(Account.Stage__c,&quot;Lost&quot;),&quot;Do we need a campaign here?&quot;,

IF(ISPICKVAL(Account.Stage__c,&quot;Unqualified&quot;),&quot;Outbound - Rehash&quot;,

IF(ISPICKVAL(Account.Stage__c,&quot;Nurturing&quot;),&quot;OB-&quot;&amp; $User.FirstName &amp; &quot; &quot; &amp; $User.LastName,

IF(ISPICKVAL(Account.Stage__c,&quot;Active&quot;),&quot;Outbound - Confirmation&quot;,&quot;&quot;
)
)
)
)</formula>
        <label>Five9C2CCampaignName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under $10K</fullName>
                </value>
                <value>
                    <fullName>10-14,999</fullName>
                </value>
                <value>
                    <fullName>15-19,999</fullName>
                </value>
                <value>
                    <fullName>20-24,999</fullName>
                </value>
                <value>
                    <fullName>25-29,999</fullName>
                </value>
                <value>
                    <fullName>30-34,999</fullName>
                </value>
                <value>
                    <fullName>35-39,999</fullName>
                </value>
                <value>
                    <fullName>40-44,999</fullName>
                </value>
                <value>
                    <fullName>45-49,999</fullName>
                </value>
                <value>
                    <fullName>50-54,999</fullName>
                </value>
                <value>
                    <fullName>55-59,999</fullName>
                </value>
                <value>
                    <fullName>60-64,999</fullName>
                </value>
                <value>
                    <fullName>65-74,999</fullName>
                </value>
                <value>
                    <fullName>75-99,999</fullName>
                </value>
                <value>
                    <fullName>100-149,000</fullName>
                </value>
                <value>
                    <fullName>150-174,999</fullName>
                </value>
                <value>
                    <fullName>175-199,999</fullName>
                </value>
                <value>
                    <fullName>200-249,000</fullName>
                </value>
                <value>
                    <fullName>250,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Residence__c</fullName>
        <label>Length of Residence</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Status__c</fullName>
        <label>Mobile Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Number_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Worth__c</fullName>
        <label>Net Worth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $1</fullName>
                </value>
                <value>
                    <fullName>$1 - $4,999</fullName>
                </value>
                <value>
                    <fullName>$5,000 - $9,999</fullName>
                </value>
                <value>
                    <fullName>$10,000 - $24,999</fullName>
                </value>
                <value>
                    <fullName>$25,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $249,999</fullName>
                </value>
                <value>
                    <fullName>$250,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>Greater than $499,999</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phone Number Lookup</label>
        <referenceTo>Phonenumber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Status__c</fullName>
        <label>Phone Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phone_Number_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fml_Tran__c</fullName>
        <formula>IF(
  AND(
    LEN(MobilePhone)=10,
    LEN(HomePhone)=10),

  IF(
    AND(
      IF(
        MID(MobilePhone,4,3) = MID(MobilePhone,7,3),
        TRUE,FALSE),
      IF(MID(HomePhone ,4,3) = MID(HomePhone,7,3),
        TRUE,FALSE)
      ),

    &quot;xFucked&quot;,

    IF(LEN(MobilePhone)=10,

      IF(
        MID(MobilePhone,4,3) = MID(MobilePhone,7,3),

        &quot;mFucked&quot;,

        IF(LEN(HomePhone)=10,

          IF(
            MID(HomePhone ,4,3)= MID(HomePhone,7,3),
            &quot;hFucked&quot;,

            &quot;&quot;),

          &quot;&quot;)),
  
    &quot;&quot;)),
&quot;&quot;)</formula>
        <label>Formula Flag For Fucked Fone Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCurrent_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryText__c</fullName>
        <label>CountryText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__MailingAddressStatus__c</fullName>
        <label>Mailing Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__MailingCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__MailingLocationAccuracy__c</fullName>
        <label>Mailing Location Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__MailingLocationSource__c</fullName>
        <label>Mailing Location Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__MailingStateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__MailingZipCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Zip/Postal Code Lookup</label>
        <referenceTo>pw_cc__ZipCode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__OtherAddressStatus__c</fullName>
        <label>Other Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Corrected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__OtherLocationAccuracy__c</fullName>
        <label>Other Location Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not checked</fullName>
                    <default>true</default>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>Not matched</fullName>
                </value>
                <value>
                    <fullName>Parsed but not found</fullName>
                </value>
                <value>
                    <fullName>Ambiguous</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Postal Code</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__OtherLocationSource__c</fullName>
        <label>Other Location Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pw_cc__StateText__c</fullName>
        <label>StateText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2AsstPhoneStatusCode__c</fullName>
        <label>RV Asst Phone Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2BusinessFaxStatusCode__c</fullName>
        <label>RV Business Fax Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2BusinessPhoneStatusCode__c</fullName>
        <label>RV Business Phone Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2EmailStatusCode__c</fullName>
        <label>RV Email Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2HomePhoneStatusCode__c</fullName>
        <label>RV Home Phone Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2MailingAddressStatusCode__c</fullName>
        <label>RV Mailing Address Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2MobilePhoneStatusCode__c</fullName>
        <label>RV Mobile Phone Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2OtherAddressStatusCode__c</fullName>
        <label>RV Other Address Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2OtherPhoneStatusCode__c</fullName>
        <label>RV Other Phone Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__rv2Status__c</fullName>
        <label>RV Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>recordval__RV2RecordStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>recordval__rv2Validation__c</fullName>
        <label>RV Validation Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <inlineHelpText>Test Description</inlineHelpText>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACTION_CADENCE</columns>
        <columns>CONTACT.ENGAGEMENT_MAP</columns>
        <columns>ACTION_CADENCE_ASSIGNEE</columns>
        <columns>SCHEDULED_RESUME_DATE_TIME</columns>
        <columns>ACTION_CADENCE_STATE</columns>
        <columns>CONTACT.LAST_CU_UPDATE_DATE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.PHONE1</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Contacts</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Account_Disposition__c</columns>
        <columns>fml_Tran__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.PHONE3</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__Simpli_LV_Contacts_1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Simpli LV Contacts 1</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>